; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_hek2cstr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_hek2cstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dTHX = common dso_local global i32 0, align 4
@ENTER = common dso_local global i32 0, align 4
@SAVETMPS = common dso_local global i32 0, align 4
@FREETMPS = common dso_local global i32 0, align 4
@LEAVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @hek2cstr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @hek2cstr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @dTHX, align 4
  %6 = load i32, i32* @ENTER, align 4
  %7 = load i32, i32* @SAVETMPS, align 4
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @HeSVKEY_force(i32* %8)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @HeUTF8(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @SvUTF8_on(i32* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load i32*, i32** %4, align 8
  %18 = call i8* @sv2cstr(i32* %17)
  store i8* %18, i8** %3, align 8
  %19 = load i32, i32* @FREETMPS, align 4
  %20 = load i32, i32* @LEAVE, align 4
  %21 = load i8*, i8** %3, align 8
  ret i8* %21
}

declare dso_local i32* @HeSVKEY_force(i32*) #1

declare dso_local i64 @HeUTF8(i32*) #1

declare dso_local i32 @SvUTF8_on(i32*) #1

declare dso_local i8* @sv2cstr(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
